fix: fixed overflow issue with background

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,6 +7,10 @@
 @layer base {
   html {
     font-family: ellograph-cf, system-ui, sans-serif !important;
+    overflow-x: hidden;
+  }
+  body {
+    overflow-x: hidden;
   }
   #main-wrapper {
     overflow-x: hidden;
